# Konami drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Konami drivers'
group_srcs = [
    'k007121.cpp',
    'k007342_k007420.cpp',
    'k007452.cpp',
    'k051733.cpp',
    'k051960.cpp',
    'k052109.cpp',
    'k053245.cpp',
    'k053247.cpp',
    'k053250.cpp',
    'k053251.cpp',
    'k054000.cpp',
    'k054338.cpp',
    'k055555.cpp',
    'k056832.cpp',
    'konamigx.cpp',
    'konamiic.cpp',
]
drivers = {
    'd_88games.cpp': ['k051316', 'k053936', 'konami', 'upd7759', 'ym2151', 'z80'],
    'd_ajax.cpp': ['k007232', 'k051316', 'k053936', 'konami', 'm6809', 'ym2151', 'z80'],
    'd_aliens.cpp': ['k007232', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_asterix.cpp': ['eeprom', 'k053260', 'k053936', 'm68000', 'ym2151', 'z80'],
    'd_battlnts.cpp': ['hd6309', 'k053936', 'ym3812', 'z80'],
    'd_bishi.cpp': ['k053936', 'm68000', 'ymz280b'],
    'd_bladestl.cpp': ['ay8910', 'hd6309', 'k053936', 'm6809', 'upd7759', 'ym2203'],
    'd_blockhl.cpp': ['k053936', 'konami', 'ym2151', 'z80'],
    'd_bottom9.cpp': ['k007232', 'k051316', 'k053936', 'm6809', 'z80'],
    'd_chqflag.cpp': ['k007232', 'k051316', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_circusc.cpp': ['dac', 'k053936', 'm6809', 'sn76496', 'z80'],
    'd_combatsc.cpp': ['ay8910', 'hd6309', 'k053936', 'upd7759', 'watchdog', 'ym2203', 'z80'],
    'd_contra.cpp': ['hd6309', 'k053936', 'm6809', 'ym2151'],
    'd_crimfght.cpp': ['k007232', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_dbz.cpp': ['k053936', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_ddribble.cpp': ['ay8910', 'flt_rc', 'k053936', 'm6809', 'vlm5030', 'ym2203'],
    'd_divebomb.cpp': ['k051316', 'k053936', 'sn76496', 'z80'],
    'd_fastlane.cpp': ['hd6309', 'k007232', 'k053936', 'watchdog'],
    'd_finalzr.cpp': ['dac', 'i8x41', 'k053936', 'm6809', 'resnet', 'sn76496'],
    'd_flkatck.cpp': ['hd6309', 'k007232', 'k053936', 'watchdog', 'ym2151', 'z80'],
    'd_gberet.cpp': ['k053936', 'sn76496', 'watchdog', 'z80'],
    'd_gbusters.cpp': ['k007232', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_gijoe.cpp': ['dtimer', 'eeprom', 'k053936', 'k054539', 'm68000', 'z80'],
    'd_gradius3.cpp': ['k007232', 'k053936', 'm68000', 'ym2151', 'z80'],
    'd_gyruss.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'k053936', 'm6809', 'z80'],
    'd_hcastle.cpp': ['k007232', 'k051649', 'k053936', 'konami', 'ym3812', 'z80'],
    'd_hexion.cpp': ['k051649', 'k053936', 'msm6295', 'z80'],
    'd_hyperspt.cpp': ['dac', 'k053936', 'm6809', 'sn76496', 'vlm5030', 'z80'],
    'd_ironhors.cpp': ['ay8910', 'k053936', 'm6809', 'ym2203', 'z80'],
    'd_jackal.cpp': ['k053936', 'm6809', 'ym2151'],
    'd_jailbrek.cpp': ['k053936', 'm6809', 'sn76496', 'vlm5030'],
    'd_junofrst.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'k053936', 'm6809', 'z80'],
    'd_kontest.cpp': ['k053936', 'sn76496', 'z80'],
    'd_labyrunr.cpp': ['ay8910', 'hd6309', 'k053936', 'ym2203'],
    'd_lethal.cpp': ['dtimer', 'eeprom', 'hd6309', 'k053936', 'k054539', 'z80'],
    'd_mainevt.cpp': ['hd6309', 'k007232', 'k053936', 'upd7759', 'ym2151', 'z80'],
    'd_megazone.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'k053936', 'm6809', 'resnet', 'z80'],
    'd_mikie.cpp': ['k053936', 'm6809', 'sn76496', 'z80'],
    'd_mogura.cpp': ['dac', 'k053936', 'z80'],
    'd_moo.cpp': ['dtimer', 'eeprom', 'k053936', 'k054539', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_mystwarr.cpp': ['dtimer', 'eeprom', 'k053936', 'k054539', 'm68000', 'z80'],
    'd_nemesis.cpp': ['ay8910', 'k005289', 'k007232', 'k051649', 'k053936', 'm68000', 'vlm5030', 'ym2151', 'ym3812', 'z80'],
    'd_pandoras.cpp': ['ay8910', 'dac', 'i8039', 'k053936', 'm6809', 'z80'],
    'd_parodius.cpp': ['k053260', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_pingpong.cpp': ['k053936', 'sn76496', 'z80'],
    'd_pooyan.cpp': ['ay8910', 'flt_rc', 'k053936', 'resnet', 'timeplt_snd', 'z80'],
    'd_rockrage.cpp': ['hd6309', 'k053936', 'm6809', 'vlm5030', 'ym2151'],
    'd_rocnrope.cpp': ['ay8910', 'flt_rc', 'k053936', 'm6809', 'timeplt_snd', 'z80'],
    'd_rollerg.cpp': ['k051316', 'k053260', 'k053936', 'konami', 'ym3812', 'z80'],
    'd_sbasketb.cpp': ['dac', 'k053936', 'm6809', 'sn76496', 'vlm5030', 'watchdog', 'z80'],
    'd_scotrsht.cpp': ['ay8910', 'k053936', 'm6809', 'ym2203', 'z80'],
    'd_shaolins.cpp': ['k053936', 'm6809', 'sn76496'],
    'd_simpsons.cpp': ['eeprom', 'k053260', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_spy.cpp': ['k007232', 'k053936', 'm6809', 'ym3812', 'z80'],
    'd_surpratk.cpp': ['k053936', 'konami', 'ym2151'],
    'd_thunderx.cpp': ['k007232', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_timeplt.cpp': ['ay8910', 'flt_rc', 'k053936', 'timeplt_snd', 'z80'],
    'd_tmnt.cpp': ['eeprom', 'k007232', 'k053260', 'k053936', 'm68000', 'upd7759', 'ym2151', 'z80'],
    'd_tp84.cpp': ['flt_rc', 'k053936', 'm6809', 'sn76496', 'z80'],
    'd_trackfld.cpp': ['dac', 'k053936', 'm6800', 'm6809', 'sn76496', 'vlm5030', 'z80'],
    'd_tutankhm.cpp': ['ay8910', 'flt_rc', 'k053936', 'm6809', 'timeplt_snd', 'z80'],
    'd_twin16.cpp': ['k007232', 'k053936', 'm68000', 'upd7759', 'ym2151', 'z80'],
    'd_ultraman.cpp': ['k051316', 'k053936', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_vendetta.cpp': ['eeprom', 'k053260', 'k053936', 'konami', 'ym2151', 'z80'],
    'd_wecleman.cpp': ['k007232', 'k051316', 'k053936', 'm68000', 'm6809', 'ym2151', 'z80'],
    'd_xexex.cpp': ['dtimer', 'eeprom', 'k053936', 'k054539', 'm68000', 'ym2151', 'z80'],
    'd_xmen.cpp': ['dtimer', 'eeprom', 'k053936', 'k054539', 'm68000', 'ym2151', 'z80'],
    'd_yiear.cpp': ['k053936', 'm6809', 'sn76496', 'vlm5030'],
}
