# Sega Mega Drive drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Sega Mega Drive drivers'
group_use     = [
    'm68000',
    'z80',
    'eeprom',
    'i2ceeprom',
    'burn_md2612',
    'dac',
    'samples',
    'sn76496',
    'ym2612',
]
group_drivers = [
    'd_mdarcbl.cpp',
    'd_megadrive.cpp',
]
group_srcs    = [
    'megadrive.cpp',
    'stm95.cpp',
]
