# Midway drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Midway drivers'
group_use     = [
    'adsp2100',
    'i386',
    'm6502',
    'm68000',
    'm6809',
    'mips3',
    'tms34010',
    'z80',
    '6821pia',
    '6840ptm',
    '8255ppi',
    'eeprom',
    'midcsd',
    'midcvsd',
    'midsat',
    'midsg',
    'midssio',
    'midtcs',
    'pic8259',
    'pit8253',
    'tms34061',
    'watchdog',
    'ay8910',
    'dac',
    'hc55516',
    'msm6295',
    'samples',
    'ym2151',
]
group_drivers = [
    'd_kinst.cpp',
    'd_tunit.cpp',
    'd_wunit.cpp',
    'd_xunit.cpp',
    'd_yunit.cpp',
]
group_srcs    = [
    'dcs2k.cpp',
    'ide.cpp',
    'midtunit.cpp',
    'midwayic.cpp',
    'midwunit.cpp',
    'narc_sound.cpp',
    'williams_adpcm.cpp',
    'williams_cvsd.cpp',
    'yawdim_sound.cpp',
]
