# Midway drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Midway drivers'
group_srcs = [
    'dcs2k.cpp',
    'ide.cpp',
    'midtunit.cpp',
    'midwayic.cpp',
    'midwunit.cpp',
    'narc_sound.cpp',
    'williams_adpcm.cpp',
    'williams_cvsd.cpp',
    'yawdim_sound.cpp',
]
drivers = {
    'd_kinst.cpp': [
        'adsp2100',
        'i386',
        'm6502',
        'm68000',
        'm6809',
        'mips3',
        'tms34010',
        'z80',
        '6821pia',
        '6840ptm',
        '8255ppi',
        'eeprom',
        'midcsd',
        'midcvsd',
        'midsat',
        'midsg',
        'midssio',
        'midtcs',
        'pic8259',
        'pit8253',
        'tms34061',
        'watchdog',
        'ay8910',
        'dac',
        'hc55516',
        'msm6295',
        'samples',
        'ym2151',
    ],
    'd_tunit.cpp': [
        'adsp2100',
        'i386',
        'm6502',
        'm68000',
        'm6809',
        'mips3',
        'tms34010',
        'z80',
        '6821pia',
        '6840ptm',
        '8255ppi',
        'eeprom',
        'midcsd',
        'midcvsd',
        'midsat',
        'midsg',
        'midssio',
        'midtcs',
        'pic8259',
        'pit8253',
        'tms34061',
        'watchdog',
        'ay8910',
        'dac',
        'hc55516',
        'msm6295',
        'samples',
        'ym2151',
    ],
    'd_wunit.cpp': [
        'adsp2100',
        'i386',
        'm6502',
        'm68000',
        'm6809',
        'mips3',
        'tms34010',
        'z80',
        '6821pia',
        '6840ptm',
        '8255ppi',
        'eeprom',
        'midcsd',
        'midcvsd',
        'midsat',
        'midsg',
        'midssio',
        'midtcs',
        'pic8259',
        'pit8253',
        'tms34061',
        'watchdog',
        'ay8910',
        'dac',
        'hc55516',
        'msm6295',
        'samples',
        'ym2151',
    ],
    'd_xunit.cpp': [
        'adsp2100',
        'i386',
        'm6502',
        'm68000',
        'm6809',
        'mips3',
        'tms34010',
        'z80',
        '6821pia',
        '6840ptm',
        '8255ppi',
        'eeprom',
        'midcsd',
        'midcvsd',
        'midsat',
        'midsg',
        'midssio',
        'midtcs',
        'pic8259',
        'pit8253',
        'tms34061',
        'watchdog',
        'ay8910',
        'dac',
        'hc55516',
        'msm6295',
        'samples',
        'ym2151',
    ],
    'd_yunit.cpp': [
        'adsp2100',
        'i386',
        'm6502',
        'm68000',
        'm6809',
        'mips3',
        'tms34010',
        'z80',
        '6821pia',
        '6840ptm',
        '8255ppi',
        'eeprom',
        'midcsd',
        'midcvsd',
        'midsat',
        'midsg',
        'midssio',
        'midtcs',
        'pic8259',
        'pit8253',
        'tms34061',
        'watchdog',
        'ay8910',
        'dac',
        'hc55516',
        'msm6295',
        'samples',
        'ym2151',
    ],
}
