# MSX drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'MSX drivers'
group_use     = [
    'z80',
    '8255ppi',
    'tms9928a',
    'ay8910',
    'dac',
    'k051649',
    'ym2413',
]
group_drivers = [
    'd_msx.cpp',
]
group_srcs    = []
