# SNK Neo Geo drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'SNK Neo Geo drivers'
group_use     = [
    'm68000',
    'z80',
    'eeprom',
    'resnet',
    'watchdog',
    'ay8910',
    'dac',
    'ym2610',
    'ym2612',
]
group_drivers = [
    'd_neogeo.cpp',
]
group_srcs    = [
    'neo_decrypt.cpp',
    'neo_palette.cpp',
    'neo_run.cpp',
    'neo_sprite.cpp',
    'neo_text.cpp',
    'neo_upd4990a.cpp',
    'neogeo.cpp',
]
