# Nintendo NES drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Nintendo NES drivers'
group_use     = [
    'm6502',
    'ay8910',
    'nes_apu',
    'ym2413',
]
group_drivers = [
    'd_nes.cpp',
]
group_srcs    = [
    'nes.cpp',
]
