# NEC PC Engine drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'NEC PC Engine drivers'
group_use     = [
    'h6280',
    'vdc',
    'c6280',
]
group_drivers = [
    'd_pce.cpp',
]
group_srcs    = [
    'pce.cpp',
]
